--- a/index.html
+++ b/index.html
@@ -3,28 +3,33 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Texas Hold'em Money Tracker</title>
+<title>Texas Hold'em Tracker</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Texas Hold'em Money Tracker</h1>
+<h1>Texas Hold'em Money Tracker</h1>
 
-    <div id="players-setup">
-        <label>Number of players (2-4): </label>
-        <input type="number" id="numPlayers" min="2" max="4" value="2">
-        <button onclick="setupPlayers()">Set Players</button>
-        <div id="playerInputs"></div>
-    </div>
+<div id="setup">
+    <label>Number of players (2-4): </label>
+    <input type="number" id="numPlayers" min="2" max="4" value="2">
+    <button onclick="setupPlayers()">Set Players</button>
+    <div id="playerInputs"></div>
+</div>
 
-    <div id="game" style="display:none;">
-        <h2>Pot: $<span id="pot">0</span></h2>
-        <div id="playerStatus"></div>
+<div id="game" style="display:none;">
+    <h2>Pot: $<span id="pot">0</span></h2>
+    <h3>Round: <span id="roundName">Pre-Flop</span></h3>
+    <div id="playerStatus"></div>
+    <div id="controls">
         <button onclick="bet()">Bet 10</button>
         <button onclick="fold()">Fold</button>
         <button onclick="nextPlayer()">Next Player</button>
-        <p>Current Player: <span id="currentPlayer"></span></p>
     </div>
+    <p>Current Player: <span id="currentPlayer"></span></p>
+    <button onclick="nextRound()" style="margin-top:20px;">Next Round</button>
+</div>
 
-    <script src="script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
+
