--- a/index.html
+++ b/index.html
@@ -20,62 +20,21 @@
     <h2>Pot: $<span id="pot">0</span></h2>
     <h3>Round: <span id="roundName">Pre-Flop</span></h3>
     <div id="playerStatus"></div>
-
-    <div id="controls">
-        <input type="number" id="betAmount" placeholder="Enter amount" min="1">
-        <button onclick="playerBet()">Bet/Raise</button>
-        <button onclick="playerCall()">Call</button>
-        <button onclick="playerCheck()">Check</button>
-        <button onclick="playerFold()">Fold</button>
-    </div>
-    
-    <p>Current Player: <span id="currentPlayer"></span></p>
 </div>
 
 <hr>
-
 <h2>Texas Hold'em Hand Rankings</h2>
 <div id="handRankings">
-    <div class="hand">
-        <h3>Royal Flush</h3>
-        <p>10♠ J♠ Q♠ K♠ A♠</p>
-    </div>
-    <div class="hand">
-        <h3>Straight Flush</h3>
-        <p>5♥ 6♥ 7♥ 8♥ 9♥</p>
-    </div>
-    <div class="hand">
-        <h3>Four of a Kind</h3>
-        <p>K♣ K♦ K♥ K♠ 3♦</p>
-    </div>
-    <div class="hand">
-        <h3>Full House</h3>
-        <p>Q♣ Q♦ Q♥ 9♣ 9♠</p>
-    </div>
-    <div class="hand">
-        <h3>Flush</h3>
-        <p>2♥ 6♥ 9♥ J♥ K♥</p>
-    </div>
-    <div class="hand">
-        <h3>Straight</h3>
-        <p>4♣ 5♦ 6♠ 7♥ 8♣</p>
-    </div>
-    <div class="hand">
-        <h3>Three of a Kind</h3>
-        <p>7♣ 7♦ 7♠ K♥ 2♠</p>
-    </div>
-    <div class="hand">
-        <h3>Two Pair</h3>
-        <p>J♣ J♦ 4♠ 4♥ 9♠</p>
-    </div>
-    <div class="hand">
-        <h3>One Pair</h3>
-        <p>10♣ 10♦ 7♥ 3♠ 2♣</p>
-    </div>
-    <div class="hand">
-        <h3>High Card</h3>
-        <p>A♣ J♦ 8♥ 5♠ 3♣</p>
-    </div>
+    <div class="hand"><h3>Royal Flush</h3><p>10♠ J♠ Q♠ K♠ A♠</p></div>
+    <div class="hand"><h3>Straight Flush</h3><p>5♥ 6♥ 7♥ 8♥ 9♥</p></div>
+    <div class="hand"><h3>Four of a Kind</h3><p>K♣ K♦ K♥ K♠ 3♦</p></div>
+    <div class="hand"><h3>Full House</h3><p>Q♣ Q♦ Q♥ 9♣ 9♠</p></div>
+    <div class="hand"><h3>Flush</h3><p>2♥ 6♥ 9♥ J♥ K♥</p></div>
+    <div class="hand"><h3>Straight</h3><p>4♣ 5♦ 6♠ 7♥ 8♣</p></div>
+    <div class="hand"><h3>Three of a Kind</h3><p>7♣ 7♦ 7♠ K♥ 2♠</p></div>
+    <div class="hand"><h3>Two Pair</h3><p>J♣ J♦ 4♠ 4♥ 9♠</p></div>
+    <div class="hand"><h3>One Pair</h3><p>10♣ 10♦ 7♥ 3♠ 2♣</p></div>
+    <div class="hand"><h3>High Card</h3><p>A♣ J♦ 8♥ 5♠ 3♣</p></div>
 </div>
 
 <script src="script.js"></script>
