--- a/index.html
+++ b/index.html
@@ -30,6 +30,31 @@
         <h3>Players' Cards</h3>
         <div id="playersHands"></div>
     </div>
+
+    <div id="bettingArea" style="display:none;">
+        <h3 id="bettingPlayer"></h3>
+        <label>Action: </label>
+        <select id="actionSelect">
+            <option value="check">Check</option>
+            <option value="call">Call</option>
+            <option value="fold">Fold</option>
+            <option value="raise">Raise</option>
+        </select>
+        <input type="number" id="raiseAmount" placeholder="Raise Amount" style="display:none;">
+        <button onclick="submitAction()">Submit</button>
+    </div>
+
+    <div id="communityInput" style="display:none;">
+        <h3>Enter Community Cards</h3>
+        <input type="text" id="communityCardsInput" placeholder="e.g., Ah Ks 10d 2c Jc">
+        <button onclick="submitCommunity()">Submit Community Cards</button>
+    </div>
+
+    <div id="playerCardsInput" style="display:none;">
+        <h3 id="holePlayerName"></h3>
+        <input type="text" id="holeCards" placeholder="e.g., Ah Ks">
+        <button onclick="submitHoleCards()">Submit Hole Cards</button>
+    </div>
 </div>
 
 <hr>
