--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
 <div id="game" style="display:none;">
     <h2>Pot: $<span id="pot">0</span></h2>
     <h3>Round: <span id="roundName">Pre-Flop</span></h3>
-    <div id="playerStatus"></div>
+
+    <div id="playerTotals">
+        <h3>Player Totals</h3>
+        <div id="totalsList"></div>
+    </div>
 
     <div id="community">
         <h3>Community Cards</h3>
